# IAGHI

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yaml
cmake/: find_deps.cmake
examples/: CMakeLists.txt
examples/hello-compute/: CMakeLists.txt
examples/hello-compute/cpp/: main.cpp
examples/hello-triangle/: CMakeLists.txt
examples/hello-triangle/cpp/: main.cpp
examples/offscreen-rendering/: CMakeLists.txt
examples/offscreen-rendering/cpp/: main.cpp
examples/render-to-texture/: CMakeLists.txt
examples/render-to-texture/cpp/: main.cpp
examples/rotating-cube/: CMakeLists.txt
examples/rotating-cube/cpp/: main.cpp
include/iaghi/: definitions.hpp  iaghi.hpp  utils.hpp
libauxid/: README.md
libauxid/include/auxid/: auxid.hpp
libauxid/include/auxid/containers/: vec.hpp
libauxid/src/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/cpp/: main.cpp
sandbox/shaders/: forward.frag  forward.frag.spv  forward.vert  forward.vert.spv
src/: CMakeLists.txt
src/cpp/: back  iaghi.cpp
src/cpp/backends/vulkan/: back  backend.cpp  buffer.cpp  device.cpp  image.cpp  pipeline.cpp  swapchain.cpp
src/cpp/utils/: utils.cpp
src/hpp/: base.hpp
src/hpp/backends/: backend.hpp
src/hpp/backends/vulkan/: backend.hpp  buffer.hpp  device.hpp  image.hpp  pipeline.hpp  swapchain.hpp
tests/cpp/: main.cpp  sample_test.cpp
